🧠 Adjust line height and margin to fix vertical spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,9 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
+  /* 2.) The rule for line height is 1.5 x the font size */
+  /* Make sure not to use rem because if we choose a different font size later, the line height will not adjust accordingly */
+  line-height: 1.5;
 }
 
 h1,
@@ -29,4 +32,10 @@ h4,
 h5,
 h6 {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+
+/* 1.) Set the margin for the heading to fix the law of proximity rule we learned about */
+
+h1 {
+  margin: 3rem 0 1rem;
 }
